# rgb2hdmi-config

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh
.github/workflows/: rust.yml
src/: args.rs  main.rs
src/rgb2hdmi/: buf.rs  clock.rs  composite.rs  device.rs  invert.rs  mod.rs  mode.rs  ports.rs  protocol.rs  screen.rs  sync.rs  video.rs
